[package]
name = "dupehunter"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Cross-platform duplicate file finder with perceptual media comparison"
authors = ["DupeHunter"]

[[bin]]
name = "dupehunter"
path = "src/main.rs"

[dependencies]
# GUI — egui immediate-mode, pure Rust, single binary
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
egui-file-dialog = "0.7"

# Image loading for thumbnails in UI
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "webp", "bmp", "tiff", "ico",
] }

# Exact hashing — XXH3 is extremely fast
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Filesystem traversal
walkdir = "2"

# Parallel processing
rayon = "1"

# Inter-thread communication
crossbeam-channel = "0.5"

# Serialization (persistence, export)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
once_cell = "1"
num_cpus = "1"
rfd = "0.15"           # Native file/folder picker dialog

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1          # Faster debug builds
